@@ -72,17 +72,19 @@ untar(tarfile, files = NULL, list = FALSE, exdir = ".",
   Arguments \code{compressed}, \code{extras} and \code{verbose} are only
   used when an external \command{tar} is used.
 
-  The internal implementation restores links (hard and soft) as symbolic
-  links on a Unix-alike, and as file copies on Windows (which works only
-  for files, not for directories).  Since it uses \code{\link{gzfile}}
-  to read a file it can handle files compressed by any of the methods
-  that function can handle: at least \command{compress}, \command{gzip},
-  \command{bzip2} and \command{xz} compression, and some types of
-  \command{lzma} compression.  It does not guard against restoring
-  absolute file paths, as some \command{tar} implementations do.  It
-  will create the parent directories for directories or files in the
-  archive if necessary. It handles both the standard (USTAR/POSIX) and
-  GNU ways of handling file paths of more than 100 bytes.
+  The internal implementation restores symbolic links as symbolic links
+  on a Unix-alike, and as file copies on Windows (which works only for
+  existing files, not for directories).  Hard links are always restored
+  as file copies (POSIX does not allow hard links to directories).
+  Since it uses \code{\link{gzfile}} to read a file it can handle files
+  compressed by any of the methods that function can handle: at least
+  \command{compress}, \command{gzip}, \command{bzip2} and \command{xz}
+  compression, and some types of \command{lzma} compression.  It does
+  not guard against restoring absolute file paths, as some \command{tar}
+  implementations do.  It will create the parent directories for
+  directories or files in the archive if necessary.  It handles both the
+  standard (USTAR/POSIX) and GNU ways of handling file paths of more
+  than 100 bytes.
 
   You may see warnings from the internal implementation such as
 \preformatted{
